<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="8dp"
        android:layout_margin="8dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:id="@+id/tvNumSat"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/number_sat"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvNumPassed"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/number_passed"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvPercentPassed"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/percentage_passed"
                android:gravity="center_vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>